# textvid

./: Cargo.toml  README.md
.github/workflows/: ci.yml  docker-publish.yml
docker/: textvid-api.Dockerfile
scripts/: build.sh  run.sh  start_api.sh
textvid-api/: Cargo.toml
textvid-api/src/: di.rs  infra.rs  main.rs
