[package]
name = "textvid-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
hyper = "0.14"
lambda_http = "0.5.2"
lambda_runtime = "0.5.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1"
http = "0.2"
axum-aws-lambda = "0.1"
tower = "0.4"
